cluster/apps/monitoring/kube-prometheus-stack/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
          scheme: http
      middlewares:
        - name: traefik-forward-auth
          namespace: networking
  tls:
    secretName: "${SECRET_CERTIFICATE_DEFAULT}"
